[package]
name = "mmcq"
version = "0.1.0"
edition = "2021"

authors = ["Jerry Wang <x.jerry.wang@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
